--- a/config/database.yml
+++ b/config/database.yml
@@ -3,23 +3,26 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
+defaults: &defaults
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
+  username: macbook
+  password: 
+  host: localhost
+  port: 5432
+    
+development: 
+  database: wayland_development
+  <<: *defaults 
+  
 
-development:
-  <<: *default
-  database: db/development.sqlite3
+test: &test
+  database: wayland_test 
+  <<: *defaults   
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+# production:  
+#   database: contact_book_production
+#   <<: *defaults 
+cucumber:
+  <<: *test
